==GarrisonCommander helps you when choosing the right follower for the right mission==
* 2.4.7
Fix: People upgrading from a abeta still had issues. Should be fixed
Feature: Broker now reports how long work queues are loaded with materials